--- a/source/index.html
+++ b/source/index.html
@@ -303,7 +303,7 @@
           <h2 class="social__title">Мои соцсети</h2>
           <ul class="social__items">
             <li class="social__item">
-              <a class="social__link social__link--vk" href="https://vk.com/sportpatriot72">ВКонтакте</a>
+              <a class="social__link social__link--vk" href="https://vk.com/bjornskarsgard">ВКонтакте</a>
             </li>
             <li class="social__item">
               <a class="social__link social__link--git" href="https://github.com/BjornSkarsgard">GitHub</a>
