--- a/source/portfolio.html
+++ b/source/portfolio.html
@@ -21,9 +21,9 @@
     <!-------------------------------------->
     <header class="header">
         <div class="header__block">
-            <a class="header__logo-link" href="index.html">
-                <div class="header__logo"></div>
-            </a>
+                <div class="header__logo">
+                        <a class="header__logo-link" href="index.html"></a>
+                </div>
             <div class="header__title-logo">
                 <p class="header__title-logo header__title-logo--skar">Skarsgar</p>
                 <p class="header__title-logo header__title-logo--d">d</p>
@@ -746,6 +746,56 @@
                         </div>
                     </div>
                 </article>
+                <article class="skills">
+                    <h1 class="skills__title visually-hidden">
+                        Мои навыки
+                    </h1>
+                    <div class="skills__box">
+                        <ul class="skills__wrapper">
+                            <li class="skills__list"> <h2 class="skills__name skills__name--skill">Знания, умения, навыки:</h2>
+                                <ul class="skills__items">
+                                    <li class="skills__item">HTML5, CSS3, jQuery.</li>
+                                    <li class="skills__item">Блочная фиксированная / резиновая верстка.</li>
+                                    <li class="skills__item">Адаптивная верстка по технологии Mobile First.</li>
+                                    <li class="skills__item">Кроссбраузерность (Chrome 42+, Firefox 37+, InternetExplorer 9+, Safari 5+, Opera 28+, Yandex 14.12+, iOS, Android, Windows Phone).</li>
+                                    <li class="skills__item">Верстка мобильной версии сайта.</li>
+                                    <li class="skills__item">Написание простого, читабельного, контекстно независимого кода с применением методологии БЭМ и препроцессора Sass.</li>
+                                    <li class="skills__item">Аккуратный, логичный, продуманный код.</li>
+                                    <li class="skills__item">Соблюдение стандартов W3C.</li>
+                                    <li class="skills__item">Подключение нестандартных шрифтов (@font-face, cufon, google web fonts).</li>
+                                    <li class="skills__item">Реализация pixel perfect.</li>
+                                    <li class="skills__item">Использую сборщик Gulp.</li>
+                                    <li class="skills__item">Работаю через GitHub.</li>
+                                </ul>
+                            </li>
+
+                            <li class="skills__list"> <h2 class="skills__name skills__name--guarant">Гарантирую:</h2>
+                                <ul class="skills__items">
+                                        <li class="skills__item">Соблюдение сроков.</li>
+                                        <li class="skills__item">Качественную работу.</li>
+                                        <li class="skills__item">Постоянный контакт.</li>    
+                                        <li class="skills__item">Разумные цены.</li>
+                                        <li class="skills__item">Доброжелательное, расположенное к конструктивному разговору общение.</li>
+                                        <li class="skills__item">Быстрый ответ на сообщения написанные Вконтакте или на почту.</li>
+                                        <li class="skills__item">Правки, если вдруг вы решили что то изменить.</li>
+                                    </ul>
+                                </li>
+                                <li class="skills__list"> <h2 class="skills__name skills__name--payment">Оплата:</h2>
+                                    <ul class="skills__items">
+                                            <li class="skills__item">Без предоплаты в 50% c вашим сервером, репозиторием. Не работаю.</li>
+                                            <li class="skills__item">Оплата на карты Visa/Mastercard(Сбербанк), Qiwi Visa, PayPal.</li>
+                                        </ul>
+                                    </li>
+                                    <li class="skills__list"> <h2 class="skills__name skills__name--clock">Время работы:</h2>
+                                        <ul class="skills__items">
+                                        <li class="skills__item">5-6 дней в неделю (Пн-Пт/Сб).</li>
+                                        <li class="skills__item">Открыт для связи каждый день с 11:00 до 00:00 (Мск).</li>
+                                    </ul>
+                                </li>
+
+                        </ul>
+                    </div>
+                </article>
                 <div class="materials__box">
                     <h1 class="materials__title materials__title--portfolio">Портфолио</h1>
                     <svg class="materials__sorting" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 489.3 489.3" style="enable-background:new 0 0 489.3 489.3;" xml:space="preserve">
@@ -766,9 +816,11 @@
                         </div>
                         <div class="block__text">
                             <div class="block__details ">
-                                <a class="block__title-link" href="#">
-                                    <h2 class="block__title">Сайт "CAT ENERGY"</h2>
-                                </a>
+                                    <h2 class="block__title">
+                                            <a class="block__title-link" href="portfolio-cat-energy.html">
+                                                Сайт "CAT ENERGY"
+                                            </a>
+                                        </h2>
                                 <p class="block__date">18.08.2019</p>
                                 <p class="block__kategory"><a class="block__kategory-link block__kategory-portfolio" href="#">Портфолио</a>
                                 </p>
@@ -777,7 +829,7 @@
                                 </p>
                             </div>
                             <div class="block__links">
-                                <a class="block__link block__link--detail" href="#">Подробнее</a>
+                                <a class="block__link block__link--detail" href="portfolio-cat-energy.html">Подробнее</a>
                             </div>
                         </div>
                     </article>
@@ -787,9 +839,11 @@
                         </div>
                         <div class="block__text">
                             <div class="block__details ">
-                                <a class="block__title-link" href="#">
-                                    <h2 class="block__title">Сайт "SkarsgarDev"</h2>
-                                </a>
+                                    <h2 class="block__title">
+                                            <a class="block__title-link" href="portfolio-SkarsgarDev.html">
+                                                Сайт "SkarsgarDev"
+                                            </a>
+                                        </h2>
                                 <p class="block__date">03.09.2019</p>
                                 <p class="block__kategory"><a class="block__kategory-link block__kategory-portfolio" href="#">Портфолио</a>
                                 </p>
@@ -798,7 +852,7 @@
                                 </p>
                             </div>
                             <div class="block__links">
-                                <a class="block__link block__link--detail" href="#">Подробнее</a>
+                                <a class="block__link block__link--detail" href="portfolio-SkarsgarDev.html">Подробнее</a>
                             </div>
                         </div>
                     </article>
