--- a/source/portfolio-cat-energy.html
+++ b/source/portfolio-cat-energy.html
@@ -62,16 +62,16 @@
                             <div class="portfolio__slider slider">
                                 <div class="slider__wrapper">
                                     <div class="slider__item">
-                                        <img class="slider__img" src="../img/cat-energy1.png" alt="">
+                                        <img class="slider__img" src="../img/cat-energy1.webp" alt="">
                                     </div>
                                     <div class="slider__item">
-                                        <img class="slider__img" src="../img/cat-energy2.png" alt="">
+                                        <img class="slider__img" src="../img/cat-energy2.webp" alt="">
                                     </div>
                                     <div class="slider__item">
-                                        <img class="slider__img" src="../img/cat-energy3.png" alt="">
+                                        <img class="slider__img" src="../img/cat-energy3.webp" alt="">
                                     </div>
                                     <div class="slider__item">
-                                        <img class="slider__img" src="../img/cat-energy4.png" alt="">
+                                        <img class="slider__img" src="../img/cat-energy4.webp" alt="">
                                     </div>
                                 </div>
                                 <a class="slider__control slider__control_left" href="#" role="button"></a>
