--- a/source/portfolio-SkarsgarDev.html
+++ b/source/portfolio-SkarsgarDev.html
@@ -62,16 +62,16 @@
                             <div class="portfolio__slider slider">
                                 <div class="slider__wrapper">
                                     <div class="slider__item">
-                                        <img class="slider__img" src="../img/skarsgardev1.png" alt="">
+                                        <img class="slider__img" src="../img/skarsgardev1.webp" alt="">
                                     </div>
                                     <div class="slider__item">
-                                        <img class="slider__img" src="../img/skarsgardev2.png" alt="">
+                                        <img class="slider__img" src="../img/skarsgardev2.webp" alt="">
                                     </div>
                                     <div class="slider__item">
-                                        <img class="slider__img" src="../img/skarsgardev1.png" alt="">
+                                        <img class="slider__img" src="../img/skarsgardev1.webp" alt="">
                                     </div>
                                     <div class="slider__item">
-                                        <img class="slider__img" src="../img/skarsgardev2.png" alt="">
+                                        <img class="slider__img" src="../img/skarsgardev2.webp" alt="">
                                     </div>
                                 </div>
                                 <a class="slider__control slider__control_left" href="#" role="button"></a>
