--- a/source/portfolio.html
+++ b/source/portfolio.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>SkarsgarDev</title>
     <link href="css/style.min.css" rel="stylesheet" />
+    <link rel="SHORTCUT ICON" href="/img/icon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300&display=swap&subset=cyrillic" rel="stylesheet">
