--- a/source/index.html
+++ b/source/index.html
@@ -397,6 +397,7 @@
                 </div>
             </div>
         </footer>
+        <div class="overlay"></div>
     </div>
     <aside class="sidebar sidebar__mobile">
         <section class="sidebar__statistic statistic">
@@ -453,7 +454,7 @@
             <div class="categories__navigation">
                 <ul>
                     <li class="categories__nav--main">
-                        <a class="categories__items" href="index.html"><span
+                        <a class="categories__items categories__items--active" href="#"><span
                                 class="categories__items-span categories__items--main"></span>Главная страница</a>
                     </li>
                     <li>
