--- a/source/portfolio-SkarsgarDev.html
+++ b/source/portfolio-SkarsgarDev.html
@@ -23,7 +23,7 @@
         <header class="header">
             <div class="header__block">
                 <div class="header__logo">
-                    <a class="header__logo-link" href="#"></a>
+                    <a class="header__logo-link" href="index.html"></a>
                 </div>
                 <div class="header__title-logo">
                     <p class="header__title-logo header__title-logo--skar">Skarsgar</p>
@@ -114,9 +114,10 @@
                         </article>
                     </div>
                 </section>
-                <aside class="sidebar">
+                <aside class="sidebar sidebar__pc">
+                    <h2 class="visually-hidden ">Сайдбар</h2>
                     <section class="sidebar__statistic statistic">
-                        <h2 class="visually-hidden">Статистика сайта</h2>
+                        <h2 class="visually-hidden ">Cтатистика сайта</h2>
                         <div class="statistic__online statistic__desc" aria-label="Текущий онлайн на сайте">
                             <div class="statistic_pulse statistic_pulse--online">
                                 <svg>
