--- a/source/portfolio.html
+++ b/source/portfolio.html
@@ -23,7 +23,7 @@
         <header class="header">
             <div class="header__block">
                 <div class="header__logo">
-                    <a class="header__logo-link" href="#"></a>
+                    <a class="header__logo-link" href="index.html"></a>
                 </div>
                 <div class="header__title-logo">
                     <p class="header__title-logo header__title-logo--skar">Skarsgar</p>
@@ -931,9 +931,10 @@
                         </div>
                     </section>
                 </section>
-                <aside class="sidebar">
+                <aside class="sidebar sidebar__pc">
+                    <h2 class="visually-hidden ">Сайдбар</h2>
                     <section class="sidebar__statistic statistic">
-                        <h2 class="visually-hidden ">Статистика сайта</h2>
+                        <h2 class="visually-hidden ">Cтатистика сайта</h2>
                         <div class="statistic__online statistic__desc" aria-label="Текущий онлайн на сайте">
                             <div class="statistic_pulse statistic_pulse--online">
                                 <svg>
@@ -1176,7 +1177,7 @@
                                 class="categories__items-span categories__items--program"></span>Мой софт</a>
                     </li>
                     <li>
-                        <a class="categories__items" href="portfolio.html"><span
+                        <a class="categories__items categories__items--active" href="#"><span
                                 class="categories__items-span categories__items--port"></span>Портфолио</a>
                     </li>
                     <li class="categories__dropdown-items">
